--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="dark_theme">Темная тема</string>
     <string name="share_the_app">Поделиться приложением</string>
     <string name="contact_support">Написать в поддержку</string>
+    <string name="terms_of_use">Пользовательское соглашение</string>
 </resources>
