--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="my_email">chidori_rasengan@yayaya.bu</string>
     <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
     <string name="clear_input">clear input</string>
+    <string name="back">назад</string>
 
 </resources>
