--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
     <string name="clear_input">clear input</string>
     <string name="back">назад</string>
+    <string name="forward">forward</string>
 
 </resources>
