--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,12 @@
     <string name="create">Создать</string>
     <string name="description">Описание</string>
     <string name="label_title">Название*</string>
+    <string name="add_playlist_exit_title">Завершить создание плейлиста?</string>
+    <string name="add_playlist_exit_message">Все несохраненные данные будут потеряны</string>
+    <string name="add_playlist_exit_cancel">Отмена</string>
+    <string name="add_playlist_exit_confirm">Завершить</string>
+    <string name="add_playlist_created">Плейлист "%1$s" создан</string>
+    <string name="add_playlist_track_added">Добавлено в плейлист "%1$s"</string>
+    <string name="player_track_added">Добавлено в плейлист "%1$s"</string>
+    <string name="player_track_exists">Трек уже добавлен в плейлист "%1$s"</string>
 </resources>
