--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,13 @@
     <string name="add_playlist_track_added">Добавлено в плейлист "%1$s"</string>
     <string name="player_track_added">Добавлено в плейлист "%1$s"</string>
     <string name="player_track_exists">Трек уже добавлен в плейлист "%1$s"</string>
+
+    <plurals name="track_count">
+        <item quantity="one">%d трек</item>
+        <item quantity="few">%d трека</item>
+        <item quantity="many">%d треков</item>
+        <item quantity="other">%d треков</item>
+    </plurals>
+
 </resources>
+
