--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,9 @@
     <string name="add_playlist_track_added">Добавлено в плейлист "%1$s"</string>
     <string name="player_track_added">Добавлено в плейлист "%1$s"</string>
     <string name="player_track_exists">Трек уже добавлен в плейлист "%1$s"</string>
+    <string name="delete_treck_dialogue">Хотите удалить трек?</string>
+    <string name="no_capitals">НЕТ</string>
+    <string name="yes_capitals">ДА</string>
 
     <plurals name="track_count">
         <item quantity="one">%d трек</item>
