add share button and bottom sheet menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,10 +49,14 @@
     <string name="add_playlist_track_added">Добавлено в плейлист "%1$s"</string>
     <string name="player_track_added">Добавлено в плейлист "%1$s"</string>
     <string name="player_track_exists">Трек уже добавлен в плейлист "%1$s"</string>
-    <string name="delete_treck_dialogue">Хотите удалить трек?</string>
+    <string name="delete_track_dialogue">Хотите удалить трек?</string>
     <string name="no_capitals">НЕТ</string>
     <string name="yes_capitals">ДА</string>
-
+    <string name="empty_tracklist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
+    <string name="share">Поделиться</string>
+    <string name="edit">Редактировать информацию</string>
+    <string name="remove_playlist">Удалить плейлист</string>
+    <string name="delete_playlist_dialogue">Хотите удалить плейлист?</string>
     <plurals name="track_count">
         <item quantity="one">%d трек</item>
         <item quantity="few">%d трека</item>
