--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="save">Сохранить</string>
     <string name="edit_button">Редактировать</string>
     <string name="data_saved">Данные сохранены</string>
+    <string name="no_tracks_message">В этом плейлисте нет треков</string>
     <plurals name="track_count">
         <item quantity="one">%d трек</item>
         <item quantity="few">%d трека</item>
